# $Id$

2007-02-27	Ivan Y. Khvostishkov

	* main/Utils/TextUtils.class.php,
	main/Utils/RussianTextUtils.class.php: added friendlyFileSize() for
	russian language and specified this method with useful parameters.

	* core/Form/Filters/SafeUtf8Filter.class.php,
	core/Form/Filter.class.php: filtrator for non-utf8 symbols.

	* core/Form/Primitives/PrimitiveEnumeration.class.php: made it
	ListedPrimitive compatible.

2007-02-27	Konstantin V. Arkhipov

	* core/Form/Primitives/PrimitiveList.class.php,
	core/Form/Primitives/PrimitiveMultiList.class.php: BC: breakage:
	getValue() now returns selected element(s); use getIndex() to get
	selected index(es).

	* core/Form/Primitives/PrimitiveMultiList.class.php: BC breakage:
	inner list of available choices are now mandatory; use PrimitiveArray
	aka (Primitive::set for old behaviour.

	* core/Form/Primitives/PrimitiveArray.class.php: setFetchMode()
	introduced.

	* meta/: ability to specify table name for classes implemented.

2007-02-26	Konstantin V. Arkhipov

	* core/Form/Primitives/PrimitiveList.class.php: BC breakage:
	getValue/getActualValue return's now selected list value, not it's
	index; getIndex() introduced.

	* core/Form/PlainForm.class.php: removed methods getChoiceValue() and
	getActualChoiceValue().

	* main/Flow/: default action is 'edit' now.

2007-02-22	Konstantin V. Arkhipov

	* main/DAOs/GenericDAO.class.php: field collisions in inherited
	classes fixed.

2007-02-21	Dmitry E. Demidov

	* test/main/ClassUtilsTest.class.php: added tests for ClassUtils.

2007-02-20	Ivan Y. Khvostishkov

	* main/Base/TempFile.class.php, main/Utils/FileUtils.class.php,
	main/Base/TransparentFile.class.php:
	implementation of temp file and transparent working with
	file or memory data.

2007-02-20	Dmitry E. Demidov

	* main/Containers/Unified/UnifiedContainer.class.php: sync list with
	clones after container save.
	
2007-02-19	Ivan Y. Khvostishkov

	* main/Base/TempDirectory.class.php, main/Utils/FileUtils.class.php: